<resources>
    <string name="app_name">tuTurno</string>
    <string name="nombre">Nombre</string>
    <string name="monto">Ingrese monto</string>
    <string name="txtmonto">Monto: </string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="clientes">Clientes</string>
    <string name="dnihomeregistro">Ingrese DNI</string>
    <string name="tituloregistroasist">Registrar Asistencia</string>
    <string name="tituloverasist">Asistencias</string>
    <string name="infofecha">Dejar campo fecha en blanco para listar asistencias del día actual</string>
    <string name="tituloconfigcuota">Configurar Cuotas</string>
    <string name="titulomodicuota">Modificar Cuotas</string>
    <string name="tituloingresecuota">Seleccione una Cuota</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="gym">Selecciona Gimnasio</string>
    <string name="correo">Email</string>
    <string name="disciplina">Disciplina: </string>
    <string name="contraseña">Contraseña</string>
    <string name="codigo">Código</string>
    <string name="codigoacceso">Ingrese el nuevo código</string>
    <string name="codigoactual">Código Actual</string>
    <string name="montoactual">Monto Actual</string>
    <string name="codigoboton">Aceptar</string>
    <string name="config">Administrar</string>
    <string name="tema">Cambiar Colores</string>
    <string name="usuario">Usuario</string>
    <string name="olvidar">¿Olvidaste tu contraseña?</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="envioemail">Enviar contraseña</string>
    <string name="cuentacrear">Crear Cuenta</string>
    <string name="calificarapp">Calificar en Play Store</string>
    <string name="actualizardatos">Actualizar Datos</string>
    <string name="cliente">Hola </string>
    <string name="title_activity_drawer_navigation">DrawerNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Compartir</string>
    <string name="btnconturno">Con turno</string>
    <string name="btnsinturno">Sin turno</string>
    <string name="descripsintur">¿Cómo desea registrar sus clientes?</string>

    <string name="action_color">Cambiar Tema</string>
    <string name="tema1">Tema 1</string>
    <string name="tema2">Tema 2</string>
    <string name="tema3">Tema 3</string>
    <string name="tema4">Tema 4</string>
    <string name="titulotema">Elige un tema</string>


    <string name="botondialogo">Cerrar</string>
    <string name="noturnos">El fin de semana no se asignan turnos.</string>
    <string name="buscar">Buscar</string>

    <string name="turnoasig">Turno Asignado</string>
    <string name="turnomodi">Modificar Turno</string>
    <string name="turnoelim">Eliminar Turno</string>
    <string name="botoncargarlista">Cargar Lista</string>
    <string name="botoncargar">Cargar</string>
    <string name="botoncargarfoto">Cargar Logo</string>
    <string name="botonmarcaradmin">Aceptar</string>


    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>

    <string name="menu_listturnos">Mi turno</string>
    <string name="menu_turnos">Mi Turno</string>
    <string name="menu_sesion">Cerrar Sesión</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_home">Home</string>
    <string name="hintdis">Seleccionar Disciplina</string>
    <string name="hintdiascuota">Seleccionar días por semana</string>
    <string name="hinttur">Seleccionar Turno</string>
    <string name="hincli">Seleccionar Cliente</string>
    <string name="titucupo">Cupos</string>
    <string name="menu_contacto">Contacto</string>


    <string name="contacto1">Destinatario</string>
    <string name="contacto2">Mensaje</string>
    <string name="contacto3">tuturno.app.contacto@gmail.com</string>
    <string name="contacto4">Asunto</string>
    <string name="contacto5">Enviar</string>
    <string name="contacto6">mensaje</string>
    <string name="contacto7">asunto</string>


    <string name="errorcontra">Ingrese contraseña</string>
    <string name="errorusu">Ingrese email</string>

    <string name="acercade">Aplicación creada por Genoff, Roy Alexis\n Versión 1.3.13\n</string>
    <string name="link"><a href="https://streamlinehq.com">Iconos e ilustraciones\n gratis de Streamline \n</a></string>
    <string name="acercade1">Agradecimiento</string>
    <string name="acercade2"><u>Visita nuestra web</u></string>
    <string name="acercade3">Acerca de</string>
    <string name="acercade4">Síguenos</string>

    <string name="checkboxrestringir">ResCliente</string>
    <string name="checkboxrestringir1">ResAdmin</string>
    <string name="checkboxrestringir2">AdminSi</string>
    <string name="checkboxrestringir3">AdminNo</string>
    <string name="checkboxcoach">Guardar Sesión</string>
    <string name="checkboxpolitica"><u>Acepta nuestras Políticas de Privacidad</u></string>
    <string name="alertdialog">Ingrese código de verificación</string>

    <string name="tituloturno">Agregar Disciplina y Turno</string>
    <string name="tituloturno1">Agregar Turno a Disciplina existente</string>
    <string name="hintdisciplina">Ingrese Disciplina</string>
    <string name="hintdisciplina1">Seleccione Disciplina</string>
    <string name="botondisci">Agregar</string>
    <string name="horaturno">Ingrese hora de turno</string>
    <string name="diasturno">Seleccione dias</string>
    <string name="cantdias">Días por semana</string>
    <string name="cupoturno">Ingrese cupo</string>
    <string name="coachturno">Ingrese entrenador</string>
    <string name="botoneliminar">Eliminar Turno</string>
    <string name="botondejarsuscri">Suscripción</string>
    <string name="aclaracioneliminar">Recuerda que al eliminar todos los turnos la disciplina y las cuotas tambien se eliminan.</string>
    <string name="aclaracionnotifi">Recuerda que al desinstalar la app automáticamente se cancelan tus suscripciones.</string>

    <string name="txtnotificacionescli">Agregar grupo para recibir notificaciones</string>
    <string name="txtnotificacionesadmin">Seleccionar grupo para enviar notificaciones</string>
    <string name="titulonotiadmin">Escriba un título</string>
    <string name="detallenotiadmin">Escriba un detalle</string>

    <string name="fechatarea">Ingrese fecha</string>
    <string name="fechapago">Ingrese fecha de pago</string>
    <string name="fechaasistencias">Ingrese fecha</string>
    <string name="botonregistrarpago">Registrar Pago</string>
    <string name="tituloverpagos">Ver Pagos</string>
    <string name="tituloveringygas">Panel Ingresos y Gastos</string>
    <string name="tituloverdetallesingygas">Ver Ingresos y Gastos Extras</string>
    <string name="titulobtnveringygas">Mostrar</string>
    <string name="mespago">Seleccione mes correspondiente</string>
    <string name="selemes">Seleccione mes</string>
    <string name="seleano">Seleccione año</string>
    <string name="txtfechapago">Fecha de Pago: </string>
    <string name="txtfechavenc">Vencimiento: </string>
    <string name="txtultimopago">Ultimo Pago: </string>
    <string name="txtdiasxsemana">Días por semana: </string>
    <string name="txtestado">Estado: </string>
    <string name="horatarea">Ingrese hora</string>
    <string name="btnguardar">Guardar Tarea</string>
    <string name="btneliminar">Eliminar Tarea</string>
    <string name="btnregingreso">Registrar\nIngreso y Gasto</string>
    <string name="tituloingresotot">Ingreso Anual Total:</string>
    <string name="titulogastotot">Gasto Anual Total:</string>
    <string name="tituloregistroingresoygasto">Agregar Ingreso o Gasto</string>
    <string name="titulodescrip">Ingrese descripción</string>
    <string name="titulotipo">Ingrese tipo</string>
    <string name="titulobotondetalles">Detalles</string>

    <string name="tituloalarmacupos">Alarma Cupos</string>
    <string name="tituloalarmadias">Alarma dias</string>


    <string name="time_title">dsds</string>
    <string name="pedturno">Reservar</string>


</resources>
