<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/nombre"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/apellido"
            android:drawableStart="@drawable/ic_person_black_24dp"

            android:ems="10"
            android:hint="@string/apellido"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtdni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxLength="8"
                android:autofillHints="@string/dni"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:ems="10"
                android:hint="@string/dni"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtdireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="@string/direccion"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:ems="10"
                android:hint="@string/direccion"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/txttelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/telefono"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:inputType="number"
            app:mask="+52(____)___-____"
            app:maskCharacter="_"
            app:maskStyle="completable" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/correo"
            android:drawableStart="@drawable/ic_mail_outline_black_24dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/contraseña"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        android:layout_margin="10dp"
        app:boxStrokeColor="#ff9e40"
        app:hintTextColor="#ff9e40"
        android:hint="@string/gym">

        <AutoCompleteTextView
            android:id="@+id/txtgym"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/gym"
            android:backgroundTint="#FAFAFA"
            android:ems="10"
            android:editable="false"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/contraseña"
            android:maxLength="6"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:ems="10"
            android:hint="@string/codigo"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/cuentacrear" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:text="@string/checkboxpolitica" />

    </LinearLayout>
</ScrollView>