<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LaFuria.FragmentContacto">

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtForEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacto1"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="170dip"
                android:hint="@string/contacto3"
                android:inputType="textVisiblePassword"
                android:maxLength="0"
                android:textSize="14sp"
                android:text="@string/contacto3"
                android:autofillHints=""
                tools:ignore="TextFields">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtForSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacto4"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/etSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="170dip"
                android:hint="@string/contacto7"
                android:textSize="14sp"
                android:textColor="#000"
                android:autofillHints=""
                android:inputType="text">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtForBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacto2"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/etBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|top"
                android:hint="@string/contacto6"
                android:textSize="14sp"
                android:lines="5"
                android:width="300dip"
                android:textColor="#000">

            </EditText>
        </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-8540442919500654/9661616493">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>