<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/misroll"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/botongym"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:hint="@string/gym"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="#ff9e40"
            app:hintTextColor="#ff9e40">

            <AutoCompleteTextView
                android:id="@+id/txtgim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/gym"
                android:backgroundTint="#FAFAFA"
                android:editable="false"
                android:ems="10"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/botoncargar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/botongym"
            android:layout_centerInParent="true"
            android:background="@drawable/diseboton"
            android:text="@string/botoncargarlista"
            android:textColor="@drawable/seleccionboton" />


        <RadioGroup
            android:id="@+id/radiogrupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/botoncargar"
            android:layout_centerInParent="true">


                <RadioButton
                    android:id="@+id/checkBoxAdminSi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/checkboxrestringir2" />

                <RadioButton
                    android:id="@+id/checkBoxAdminNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/checkboxrestringir3" />


                <RadioButton
                    android:id="@+id/checkBoxRes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/checkboxrestringir1" />

                <RadioButton
                    android:id="@+id/checkBoxRes1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/checkboxrestringir" />

        </RadioGroup>


        <ListView
            android:id="@+id/lista"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_below="@+id/radiogrupo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10sp"
            android:choiceMode="singleChoice"
            tools:ignore="NestedScrolling">
        </ListView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lista"
            android:layout_centerInParent="true"
            android:orientation="horizontal">


            <Button
                android:id="@+id/botonaceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/diseboton"
                android:drawableStart="@drawable/ic_baseline_check_circle_24"
                android:text="@string/botonmarcaradmin"
                android:textColor="@drawable/seleccionboton"
                android:textSize="12sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
